[package]
name = "moonshine-core"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Unconventional framework for making games in Bevy"
categories = ["game-development"]
keywords = ["bevy", "ecs"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_core"
repository = "https://github.com/Zeenobit/moonshine_core"

[dependencies]
bevy_app = "0.16.*"
moonshine-kind = { version = "0.2.2", path = "crates/kind" }
moonshine-object = { version = "0.2.3", path = "crates/object" }
moonshine-save = { version = "0.4.1", path = "crates/save" }
moonshine-check = { version = "0.1.2", path = "crates/check" }
moonshine-util = { version = "0.3.1", path = "crates/util" }
moonshine-tag = { version = "0.2.0", path = "crates/tag" }

[dev-dependencies]
bevy = "0.16.*"
