[package]
name = "moonshine-core"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Unconventional framework for making games in Bevy"
categories = ["game-development"]
keywords = ["bevy", "ecs"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_core"
repository = "https://github.com/Zeenobit/moonshine_core"

[dependencies]
bevy_app = "0.16.*"
moonshine-kind = { version = "0.3.*" }
moonshine-object = { version = "0.2.*" }
moonshine-save = { version = "0.5.*" }
moonshine-util = { version = "0.3.*" }
moonshine-tag = { version = "0.3.*", features = ["pretty-serde"] }

[dev-dependencies]
bevy = "0.16.*"
