[package]
name = "moonshine-core"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Unconventional framework for making games in Bevy"
categories = ["game-development"]
keywords = ["bevy", "ecs"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_core"
repository = "https://github.com/Zeenobit/moonshine_core"

[dependencies]
bevy_app = "0.17"
moonshine-kind = "0.4"
moonshine-object = "0.3"
moonshine-save = "0.6"
moonshine-util = "0.4"
moonshine-tag = { version = "0.4", features = ["pretty-serde"] }

[dev-dependencies]
bevy = "0.17"
